# zaptec-invoice-app

./: .gitignore  README.md  deplyoment.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
backend/: .env  .env.example  database.py  invoice_pdf.py  main.py  models.py  pdf_generator.py  pyproject.toml  skogsbrynet_invoice_template.html  skogsbrynet_invoice_template_variables.json  test_zaptec.rest  zaptec_api.py
backend/scripts/: baseload.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: InvoiceList.jsx  RefreshButton.jsx
